chore: make lint happy